# static_link

./: CMakeLists.txt
lib/: base_test.cpp  base_test.h  derived_test.cpp  derived_test.h
