cmake_minimum_required(VERSION 3.0)
project(untitled2)
include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
set(CMAKE_CXX_STANDARD 14)
add_library(static_lib STATIC ${CMAKE_CURRENT_SOURCE_DIR}/lib/base_test.cpp ${CMAKE_CURRENT_SOURCE_DIR}/lib/derived_test.cpp)
add_library(shared_lib SHARED ${CMAKE_CURRENT_SOURCE_DIR}/lib/base_test.cpp ${CMAKE_CURRENT_SOURCE_DIR}/lib/derived_test.cpp)
#add_library(shared_libb SHARED ${CMAKE_CURRENT_SOURCE_DIR}/lib/base_test.cpp ${CMAKE_CURRENT_SOURCE_DIR}/lib/derived_test.cpp)
add_executable(main main.cpp ${CMAKE_CURRENT_SOURCE_DIR}/lib/base_test.cpp ${CMAKE_CURRENT_SOURCE_DIR}/lib/derived_test.cpp)
target_link_libraries(main shared_lib)
